crates/carta/tests/snapshots/golden_writer__revealjs__table__table-empty.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<table>

</table>
</section>
