crates/carta/tests/snapshots/golden_writer__revealjs__table__table-foot.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<table>
<thead>
<tr>
<th>h1</th>
<th>h2</th>
</tr>
</thead>
<tbody>
<tr>
<td>a</td>
<td>b</td>
</tr>
</tbody><tfoot>
<tr>
<td>sum</td>
<td>3</td>
</tr>
</tfoot>

</table>
</section>
