crates/carta/tests/snapshots/golden_writer__revealjs__table__table-in-blockquote.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<blockquote>
<table>
<thead>
<tr>
<th>a</th>
<th>b</th>
</tr>
</thead>
<tbody>
<tr>
<td>1</td>
<td>2</td>
</tr>
</tbody>
</table>
</blockquote>
</section>
