crates/carta/tests/snapshots/golden_writer__revealjs__table__table-rowspan.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<table>
<tbody>
<tr>
<td rowspan="2">tall</td>
<td>a</td>
</tr>
<tr>
<td>b</td>
</tr>
</tbody>
</table>
</section>
